<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/generate"
        android:icon="@drawable/ic_menu_puzzle"
        android:title="@string/menu_generate">
    </item>
    <item
        android:id="@+id/stop"
        android:icon="@drawable/ic_menu_stop"
        android:title="@string/menu_stop"
        android:visible="false">
    </item>
    <item
        android:id="@+id/sub_parameters"
        android:icon="@drawable/ic_menu_equalizer"
        android:title="@string/menu_sub_params">
        <menu>
            <item
                android:id="@+id/sequence"
                android:title="@string/menu_sequence"/>
            <item
                android:id="@+id/iterations"
                android:title="@string/menu_iterations"/>
            <item
                android:id="@+id/warmup"
                android:title="@string/menu_warmup"/>
            <item
                android:id="@+id/x_interval"
                android:title="@string/menu_xint"/>
            <item
                android:id="@+id/y_interval"
                android:title="@string/menu_yint"/>
            <item
                android:id="@+id/x0"
                android:title="@string/menu_x0"/>
            <item android:id="@+id/equation" android:title="@string/menu_equation" /><item
                android:id="@+id/random_params"
                android:title="@string/menu_randomize"/>
            
        </menu>
    </item>
    <item
        android:id="@+id/sub_color"
        android:icon="@drawable/ic_menu_colorpicker"
        android:title="@string/menu_sub_color">
        <menu>
            <item
                android:id="@+id/stability_gradient"
                android:title="@string/menu_stability_gradient"/>
            <item
                android:id="@+id/chaos_gradient"
                android:title="@string/menu_chaos_gradient"/>
            <item
                android:id="@+id/one_gradient"
                android:checkable="true"
                android:checked="false"
                android:title="@string/menu_one_gradient"/>
            <item
                android:id="@+id/exponent"
                android:title="@string/menu_exponent"/>
            <item android:id="@+id/auto_exponent_interval" android:title="@string/menu_auto_exponent_interval" android:checkable="true" android:checked="false"/><item android:id="@+id/histogram" android:title="@string/menu_histogram" android:checked="false" android:checkable="true" /><item
                android:id="@+id/cyclic_coloration"
                android:checkable="false"
                android:checked="false"
                android:title="@string/menu_cyclic_coloration"/>
            
            <item
                android:id="@+id/gradations"
                android:title="@string/menu_gradations"/>
            <item
                android:id="@+id/random_colors"
                android:title="@string/menu_randomize"/>
            
        </menu>
    </item>
    <item
        android:id="@+id/sub_display"
        android:icon="@drawable/ic_menu_monitor"
        android:title="@string/menu_sub_display">
        <menu>
            <item
                android:id="@+id/fullscreen"
                android:checkable="true"
                android:checked="true"
                android:title="@string/menu_fullscreen"/>
            <item
                android:id="@+id/swap"
                android:checkable="true"
                android:checked="false"
                android:title="@string/menu_swap"/>
            <item
                android:id="@+id/debug"
                android:checkable="true"
                android:checked="false"
                android:title="@string/menu_debug"/>
            <item
                android:id="@+id/save_image"
                android:title="@string/menu_save_image"/>
        </menu>
    </item>
    <item
        android:id="@+id/sub_presets"
        android:icon="@drawable/ic_menu_categories"
        android:title="@string/menu_sub_presets">
        <menu>
            <item
                android:id="@+id/load_preset"
                android:title="@string/menu_load"/>
            <item
                android:id="@+id/save_preset"
                android:title="@string/menu_save"/>
            <item
                android:id="@+id/remove_preset"
                android:title="@string/menu_remove"/>
            <item
                android:id="@+id/import_preset"
                android:title="@string/menu_import"/>
            <item
                android:id="@+id/export_preset"
                android:title="@string/menu_export"/>
        </menu>
    </item>
    <item
        android:id="@+id/sub_help"
        android:icon="@drawable/ic_menu_light"
        android:title="@string/menu_sub_help">
        <menu>
            <item
                android:id="@+id/help_contents"
                android:title="@string/menu_help_contents"/>
            <item
                android:id="@+id/about"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/exit"
                android:title="@string/menu_exit"/>
        </menu>
    </item>

</menu>