<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/gradient_preview"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp" />

    <ListView
        android:id="@+id/color_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="15dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/main_colors"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:id="@+id/brightness"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:id="@+id/saturation"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_red"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/red_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_green"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/green_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_blue"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/blue_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>